--- a/style.css
+++ b/style.css
@@ -7,6 +7,62 @@ html,
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
-/* Add styles here! */
+.wrapper {
+  min-height: 100%;
+}
+
+.intro-chunk {
+  margin: 64px 0;
+}
+
+header p{
+  font-size: 1.25rem;
+  max-width: 340px;
+}
+
+header h1{
+  margin: 48px 0; 
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+main {
+  border-top: 6px solid hsl(0deg, 0%, 40%);
+  background: hsl(0deg, 0%, 60%);
+  height: 100%;
+  padding-top: 64px;
+}
+
+.max-width-wrapper{
+  max-width: 570px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+.card {
+  background: hsl(0deg, 0%, 100%);
+  border-bottom: 6px solid hsl(0deg, 0%, 40%);
+  margin-left: -16px;
+  margin-right: -16px;
+  padding: 0px 24px;
+  padding-top: 8px;
+}
+
+.indented-heading{
+  width: fit-content;
+  background: hsl(45deg, 100%, 50%);
+  border-bottom: 6px solid hsl(45deg, 100%, 40%);
+  margin-left: -32px;
+  padding: 16px 32px;
+}
+
+h2 {
+  margin-block-start: 0;
+}
